# votropy

./: .gitignore  CMakeLists.txt  voronoi.cpp
